# Numerical-Math-Functions

./: CMakeLists.txt  README.md
src/: Commands.cpp  Commands.hpp  Functors.cpp  LAGR.cpp  LAGR.hpp  Neuton.cpp  Neuton.hpp  Table.cpp  Table.hpp  main.cpp
src/lab2/: Functors.hpp  LAGR.cpp  Neuton.cpp  Neuton.hpp  Table.hpp
